BaSP-W04-2022:Last fixes on mobile styles

--- a/Semana-04/css/styles.css
+++ b/Semana-04/css/styles.css
@@ -7,14 +7,134 @@ body {
     margin: 0;
 }
 
+
+@media (max-width: 480px) {
+
+    .main-container {
+        height: 450px;
+        display: flex;
+        align-items: center;
+        width: 100%;
+        flex-direction: column;
+        justify-content: end;
+        margin-top: 0px;
+        padding: 0px 20px;
+        gap: 27px;
+    }
+    
+    .main-son {
+        height: 113px;
+        font-size: 12px;
+        line-height: 20px;
+    }
+
+    .main-container-div2 {
+        width: 85%;
+    }
+
+    .button-container {
+        position: relative;
+        top: 190px;
+        left: 80px;
+        padding-right: 30px;
+    }
+    
+    .button-son {
+        border: none;
+        border-radius: 5px;
+        width: 138px;
+        height: 38px;
+        transition: all 0.3s;
+        box-shadow: grey 0px 10px 10px;
+        background-color: white;
+        transition: all 0.3s;
+    }
+    
+    .section-div-1 {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        padding: 40px;
+    }
+    
+    .section-div-2 {
+        display: flex;
+        justify-content: end;
+        flex-wrap: wrap;
+        padding-left: 50px;
+        width: 100%;
+    }
+    
+    .section-div-son-1 {
+        display: flex;
+        width: 100%;
+        flex-basis: 100%;
+    }
+    
+    .section-div-3 {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        justify-content: space-around;
+    }
+
+    .input-size {
+        width: 100%;
+    }
+    
+    .message-position {
+        display: flex;
+        justify-content: center;
+        padding-top: 0px;
+    }
+
+    .button-style {
+        background-color: white;
+        border: 2px solid #373867;
+        text-decoration: none;
+        border-radius: 7px;
+        width: 110px;
+        height: 41px;
+        box-shadow: 0px 4px 5px 0px rgb(79 72 72 / 75%);
+        transition: all 0.3s;
+    }
+    
+    .section-container-4 {
+        margin-top: 0px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+    
+    .spacing-div {
+        width: 42%;
+        line-height: 16px;
+        margin-right: 30px;
+        font-size: 20px;
+    }
+    .wrapping-section {
+        width: 51%;
+    }
+
+    .container-section-form {
+        background-color: #AACE9B;
+        padding: 20px;
+        width: 100%;
+        height: 565px;
+        border-radius: 20px;
+    }
+}
+
+
 @media (max-width: 800px) {
-    .img-container{
+    .img-container {
         width: 100%;
         display: flex;
         justify-content: end;
         padding-right: 50px;
         visibility: visible;
     }
+
     .aside-container {
         display: none;
     }
@@ -56,7 +176,7 @@ body {
 
     .container-section-form {
         background-color: #AACE9B;
-        padding: 50px;
+        padding: 20px;
         width: 100%;
         height: 565px;
         border-radius: 20px;
@@ -95,115 +215,4 @@ body {
     .wrapping-section {
         width: 50%;
     }
-}
-
-@media (max-width: 480px) {
-
-    .main-container {
-        height: 450px;
-        display: flex;
-        align-items: center;
-        width: 100%;
-        flex-direction: column;
-        justify-content: end;
-        margin-top: 0px;
-        padding: 0px 20px;
-        gap: 27px;
-    }
-
-    .main-son {
-        height: 113px;
-        font-size: 12px;
-        line-height: 20px;
-    }
-
-    .main-container-div2 {
-        width: 85%;
-    }
-
-    .button-container {
-        position: relative;
-        top: 190px;
-        left: 80px;
-        padding-right: 30px;
-    }
-
-    .button-son {
-        border: none;
-        border-radius: 5px;
-        width: 138px;
-        height: 38px;
-        transition: all 0.3s;
-        box-shadow: grey 0px 10px 10px;
-        background-color: white;
-        transition: all 0.3s;
-    }
-
-    .section-div-1 {
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-        padding: 40px;
-    }
-
-    .section-div-2 {
-        display: flex;
-        justify-content: end;
-        flex-wrap: wrap;
-        padding-left: 50px;
-        width: 100%;
-    }
-
-    .section-div-son-1 {
-        display: flex;
-        width: 100%;
-        flex-basis: 100%;
-    }
-
-    .section-div-3 {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        justify-content: space-around;
-    }
-
-    .input-size {
-        width: 100%;
-    }
-
-    .message-position {
-        display: flex;
-        justify-content: center;
-        padding-top: 0px;
-    }
-
-    .button-style {
-        background-color: white;
-        border: 2px solid #373867;
-        text-decoration: none;
-        border-radius: 7px;
-        width: 110px;
-        height: 41px;
-        box-shadow: 0px 4px 5px 0px rgb(79 72 72 / 75%);
-        transition: all 0.3s;
-    }
-
-    .section-container-4 {
-        margin-top: 0px;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-    }
-
-    .spacing-div {
-        width: 37%;
-        line-height: 16px;
-        margin-right: 30px;
-        font-size: 20px;
-    }
-
-    .wrapping-section {
-        width: 51%;
-    }
-
 }
